# TekTimer

./: .gitignore  CHANGELOG.md  Readme.md  generate_presets.js  hall_presets_timetable.json  index.html  package-lock.json  package.json  package.json.bak  release.ps1  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  cargo_out.txt  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  timer.rs
src/components/: AddExamTimerModal.tsx  AnnouncementModal.tsx  AnnouncementScheduleEditor.tsx  AnnouncementStatusBar.tsx  AnnouncementToast.tsx  BlackoutScreen.tsx  CenterStageView.tsx  ControlBar.tsx  CourseManager.tsx  DismissOverlay.tsx  DynamicTimeDisplay.tsx  EditExamTimerModal.tsx  EditQuizTimerModal.tsx  EmptyState.tsx  ExtraTimeModal.tsx  FontSizeControl.tsx  MiniTimerCard.tsx  PresetManager.tsx  ProgressBar.tsx  QuizSetupModal.tsx  QuizTimer.tsx  SettingsPanel.tsx  TimerCard.tsx  UpdateChecker.tsx
src/hooks/: useBlackout.ts  useFullscreen.ts  useIdleControls.ts  useProctorStore.ts  useProjectedEndTime.ts  useSettings.ts  useTimerStore.ts
src/lib/: audioManager.ts  fontSizeUtils.ts  formatTime.ts  gridLayout.ts  types.ts
src/lib/announcements/: LLMEnhancer.ts  announcementQueue.ts  defaultSchedule.ts  index.ts  resolveTemplate.ts
src/lib/tts/: ElevenLabsTTSProvider.ts  OpenAITTSProvider.ts  WebSpeechTTSProvider.ts  (+2 more)
src/screens/: ExamScreen.tsx  HomeScreen.tsx  ProctorDashboard.tsx  QuizScreen.tsx
(+1 files in other folders)
